--- a/site/cardType01.html
+++ b/site/cardType01.html
@@ -13,22 +13,52 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/cardType.css">
 </head>
 <body>
-    <section id="cardType">
+
+
+
+    <section id="cardType" class="cardType01">
         <div class="container">
-            <div class="cardType01">
-                <h2>카드 유형2</h2>
-                <p>사이트 제작에서 많이 사용되는 카드 스타일 입니다.</p>
-                <div class="card-box">
-                   <div>1</div>
-                   <div>2</div>
-                   <div>3</div>
-                   <div>4</div>
-                </div>
+      <h2>INDECISIVE</h2>
+      <p>결정하는데 있어서 항상 어려움을 느끼는 분들을 위한 사이트 입니다.</p>
+      <div class="card-wrap">
+          <div class="card">
+              <a href="#">
+                  <img src="img/card01.jpg" alt="사이트 만들기 관련 이미지입니다." class="card-img">
+                  <strong class="card-title">오늘 뭐 먹지?</strong>
+                  <span class="card-desc">먹는거 하나도 제대로 못고르는 당신을 위한 사이트 입니다.</span>
+                  <span class="card-keyword">
+                      <span>#음식</span>
+                      <span>#추천</span>
+                  </span>
+                </a>
+          </div>
+          <div class="card">
+            <a href="#">
+                <img src="img/card02.jpg" alt="사이트 만들기 관련 이미지입니다." class="card-img">
+                <strong class="card-title">오늘 뭐 하지?</strong>
+                <span class="card-desc">당신처럼 할거 없는 사람들과 시간을 보내 보세요.</span>
+                <span class="card-keyword">
+                    <span>#오늘</span>
+                    <span>#뭐 하지</span>
+                </span>
+              </a>
+          </div>
+          <div class="card">
+            <a href="#">
+                <img src="img/card03.jpg" alt="사이트 만들기 관련 이미지입니다." class="card-img">
+                <strong class="card-title">오늘 뭐 입지?</strong>
+                <span class="card-desc">옷 조차 못 고르는 당신을 위한 사이트 입니다.</span>
+                <span class="card-keyword">
+                    <span>#오늘</span>
+                    <span>#뭐 입지</span>
+                </span>
+              </a>
             </div>
         </div>
-    </section>
+    </div>  
+</section>
 </body>
 </html>  
