--- a/java script/index.html
+++ b/java script/index.html
@@ -60,7 +60,7 @@
             font-size: 8vw;
         }
 
-        #contents p {
+        #contents p a {
             font-family: 'NEXON Lv1 Gothic OTF';
             background: #0e43f1;
             color: #fff;
@@ -69,6 +69,12 @@
             border-radius: 50px;
             font-size: 16px;
             margin-bottom: 2%;
+            border: 1px solid #fff;
+        }
+        #contents p a:hover {
+            border: 1px solid #0e43f1;
+            background: #fff;
+            color: #0e43f1;
         }
         .menu li {
             display: inline;
@@ -569,7 +575,10 @@
                 </svg>
             </div>
             <h1>Javascript</h1>
-            <p>자바스크립트 레퍼런스 북입니다.</p>
+            <p>
+                <a href="index.html">자바스크립트 레퍼런스 북</a>
+                <a href="index2.html">제이쿼리 레퍼런스 북</a>  
+            </p>
             <nav class="menu">
                 <ul>
                     <li><a href="javascriptRefer01.html">데이터 저장하기</a></li>
