--- a/refer-jquery/jqueryRefer03.html
+++ b/refer-jquery/jqueryRefer03.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>javascript</title>
+    <title>jquery</title>
     <link rel="stylesheet" href="https://tistory4.daumcdn.net/tistory/2933724/skin/images/font.css">
     <link rel="stylesheet" href="https://tistory4.daumcdn.net/tistory/2933724/skin/images/font-awesome.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.0/themes/prism-okaidia.min.css"
@@ -159,49 +159,74 @@
                 </tr>
                 <tr>
                     <td>.removeClass()</td>
-                    <td><a href="../refer-javascript/javascriptRefer10.html" target="_blank"></a>.classList.remove()</td>
+                    <td><a href="../refer-javascript/javascriptRefer10.html" target="_blank">.classList.remove()</a></td>
                     <td>클래스를 삭제합니다.</td>
                 </tr>
                 <tr>
                     <td>.toggleClass()</td>
-                    <td><a href="../refer-javascript/javascriptRefer10.html" target="_blank"></a>.classList.toggle()</td>
+                    <td><a href="../refer-javascript/javascriptRefer10.html" target="_blank">.classList.toggle()</a></td>
                     <td>클래스를 추가/ 삭제 합니다.</td>
                 </tr>
                 <tr>
                     <td>.hasClass()</td>
-                    <td><a href="../refer-javascript/javascriptRefer10.html" target="_blank"></a>.classList.contains()</td>
+                    <td><a href="../refer-javascript/javascriptRefer10.html" target="_blank">.classList.contains()</a></td>
                     <td>클래스를 검색 합니다.</td>
                 </tr>
                 <tr>
-                    <td class="center" rowspan="6">Dimensions</td>
+                    <td class="center" rowspan="11">Dimensions</td>
                     <td>.width()</td>
                     <td>-</td>
-                    <td>요소의 가로 값을 가져오거나 설정합니다.</td>
+                    <td>요소의 가로 값(패딩/보더/마진 미포함)을 가져오거나 설정합니다.</td>
                 </tr>
                 <tr>
                     <td>.innerwidth()</td>
-                    <td>-</td>
-                    <td>요소의 가로(패딩, 보더, 마진 포함) 값을 가져오거나 설정합니다.</td>
+                    <td><a href="../refer-javascript/javascriptRefer10.html#sample04">element.clientWidth</a></td>
+                    <td>요소의 가로(패딩 포함) 값을 가져오거나 설정합니다.</td>
                 </tr>
                 <tr>
                     <td>.outerwidth()</td>
+                    <td><a href="../refer-javascript/javascriptRefer10.html#sample04">element.offsetWidth</a></td>
+                    <td>요소의 가로(패딩/보더 포함) 값을 가져오거나 설정합니다.</td>
+                </tr>
+                <tr>
+                    <td>.outerwidth(true)</td>
                     <td>-</td>
-                    <td>요소의 가로(패딩, 보더, 포함) 값을 가져오거나 설정합니다.</td>
+                    <td>요소의 가로(패딩/보더/마진 포함) 값을 가져오거나 설정합니다.</td>
                 </tr>
                 <tr>
                     <td>.height()</td>
                     <td>-</td>
-                    <td>요소의 세로 값을 가져오거나 설정합니다.</td>
+                    <td>요소의 세로((패딩/보더/마진 미포함) 값을 가져오거나 설정합니다.</td>
                 </tr>
                 <tr>
                     <td>.innerheight()</td>
-                    <td>-</td>
-                    <td>요소의 세로(패딩, 보더, 마진 포함) 값을 가져오거나 설정합니다.</td>
+                    <td><a href="../refer-javascript/javascriptRefer10.html#sample04">element.clientHeight</a></td>
+                    <td>요소의 세로(패딩 포함) 값을 가져오거나 설정합니다.</td>
                 </tr>
                 <tr>
                     <td>.outerheight()</td>
+                    <td><a href="../refer-javascript/javascriptRefer10.html#sample04">element.offsetHeight</a></td>
+                    <td>요소의 세로(패딩/보더 포함) 값을 가져오거나 설정합니다.</td>
+                </tr>
+                <tr>
+                    <td>.outerheight(true)</td>
                     <td>-</td>
-                    <td>요소의 세로(패딩, 보더, 마진 포함) 값을 가져오거나 설정합니다.</td>
+                    <td>요소의 세로(패딩/보더/마진 포함) 값을 가져오거나 설정합니다.</td>
+                </tr>
+                <tr>
+                    <td>$(document).width()</td>
+                    <td>-</td>
+                    <td>문서의 가로값을 가져오거나 설정합니다.</td>
+                </tr>
+                <tr>
+                    <td>$(window).width()</td>
+                    <td>window.innerWidth()</td>
+                    <td>문서의 가로값을 가져오거나 설정합니다.</td>
+                </tr>
+                <tr>
+                    <td>$(window).height()</td>
+                    <td>window.innerHeight()</td>
+                    <td>문서의 세로값을 가져오거나 설정합니다.</td>
                 </tr>
                 <tr>
                     <td class="center" rowspan="5">Offset</td>
@@ -406,6 +431,7 @@
             padding: 10px;
             margin: 10px;
             border: 5px solid #eb97d3;
+            box-sizing: content-box;
         }
     </style>
 
@@ -419,14 +445,16 @@
             <a href="#c" class="btn4-1">클릭하면 원의 가로(width) 값을 구합니다.</a>
             <a href="#c" class="btn4-2">클릭하면 원의 가로(innerwidth) 값을 구합니다.</a>
             <a href="#c" class="btn4-3">클릭하면 원의 가로(outerwidth) 값을 구합니다.</a>
-            <a href="#c" class="btn4-4">클릭하면 원의 세로(height) 값을 구합니다.</a>
-            <a href="#c" class="btn4-5">클릭하면 원의 세로(innerHeight) 값을 구합니다.</a>
-            <a href="#c" class="btn4-6">클릭하면 원의 세로(outerHeight) 값을 구합니다.</a>
+            <a href="#c" class="btn4-4">클릭하면 원의 가로(outerwidth(true)) 값을 구합니다.</a>
+            <a href="#c" class="btn4-5">클릭하면 원의 세로(height) 값을 구합니다.</a>
+            <a href="#c" class="btn4-6">클릭하면 원의 세로(innerHeight) 값을 구합니다.</a>
+            <a href="#c" class="btn4-7">클릭하면 원의 세로(outerHeight) 값을 구합니다.</a>
+            <a href="#c" class="btn4-8">클릭하면 원의 세로(outerHeight(true)) 값을 구합니다.</a>
         </div>
         <div class="btn">
-            <a href="#c" class="btn4-7">클릭하면 샘플 박스의 가로 값을 구합니다.</a>
-            <a href="#c" class="btn4-8">클릭하면 문서의 가로 값을 구합니다.</a>
-            <a href="#c" class="btn4-9">클릭하면 브라우저의 가로 값을 구합니다.</a>
+            <a href="#c" class="btn4-9">클릭하면 샘플 박스의 가로 /세로 값을 구합니다.</a>
+            <a href="#c" class="btn4-10">클릭하면 문서의 가로 /세로 값을 구합니다.</a>
+            <a href="#c" class="btn4-11">클릭하면 브라우저의 가로 /세로 값을 구합니다.</a>
         </div>
         <div class="code">
             <pre class="line-numbers"><code class="language-js"> {
@@ -495,27 +523,35 @@
         });
 
         $(".btn4-4").click(function(){
-            demension("세로(height)" , $(".circle4").height());
+            demension("가로(outerwidth)" , $(".circle4").outerWidth(true));
         });
 
         $(".btn4-5").click(function(){
-            demension("세로(innerheight)" , $(".circle4").innerHeight());
+            demension("세로(height)" , $(".circle4").height());
         });
 
         $(".btn4-6").click(function(){
-            demension("세로(outerheight)" , $(".circle4").outerHeight());
+            demension("세로(innerheight)" , $(".circle4").innerHeight());
         });
 
         $(".btn4-7").click(function(){
-            $(".text4").text("샘플 박스의 가로 값은" + $("#sample04").width() + "px입니다.")
+            demension("세로(outerheight)" , $(".circle4").outerHeight());
         });
 
         $(".btn4-8").click(function(){
-            $(".text4").text("문서의 가로 값은" + $(document).width() + "px입니다.")
+            demension("세로(outerheight)" , $(".circle4").outerHeight(true));
         });
 
         $(".btn4-9").click(function(){
-            $(".text4").text("브라우저의 가로 값은" + $(window).width() + "px입니다.")
+            $(".text4").html("샘플 박스의 가로 값은" + $("#sample04").width() + "px입니다.<br> 샘플 박스의 세로 값은" + $("#sample04").height() + "px입니다.")
+        });
+
+        $(".btn4-10").click(function(){
+            $(".text4").html("문서의 가로 값은" + $(document).width() + "px입니다.<br> 문서의 세로 값은" + $(document).height() + "px입니다.")
+        });
+
+        $(".btn4-11").click(function(){
+            $(".text4").html("브라우저의 가로 값은" + $(window).width() + "px입니다.<br> 문서의 세로 값은" + $(window).height() + "px입니다.")
         });
     </script>
 
