--- a/refer-javascript/javascriptRefer10.html
+++ b/refer-javascript/javascriptRefer10.html
@@ -148,7 +148,7 @@
 </head>
 
 <body>
-    <h1><a href="index.html">요소 객체</a></h1>
+    <h1><a href="index.html">Javascript 레퍼런스</a></h1>
     <ul class="page">
         <li><a href="/refer-html/index.html">HTML</a></li>
         <li><a href="../refer-css/index.html">CSS</a></li>
@@ -178,12 +178,25 @@
     </nav>
 
     <h2 class="mt20">요소 객체</h2>
-    <ul class="list">
-        <li><a href="#sample01">1.요소 객체 : 클래스 메서드 : .classList.add()</a></li>
-        <li><a href="#sample02">2.요소 객체 : 클래스 메서드 : .classList.remove()</a></li>
-        <li><a href="#sample02">3.요소 객체 : 클래스 메서드 : .classList.toggle()</a></li>
-        <li><a href="#sample02">4.요소 객체 : 클래스 메서드 : .classList.contains()</a></li>
-    </ul>
+    <ol class="list">
+        <li><a href="#sample01">요소 객체 : querySelector() : 요소 선택하기</a></li>
+        <li><a href="#sample01">요소 객체 : querySelectorAll() : 모든 요소 선택하기</a></li>
+        <li><a href="#sample01">요소 객체 : document.getElementById() : 아이디 요소 선택하기</a></li>
+        <li><a href="#sample01">요소 객체 : document.getElementByClassName() : 클래스 요소 선택하기</a></li>
+
+        <br>
+        <li><a href="#sample01">요소 객체 : 클래스 메서드 : .classList.add() : 클래스 추가</a></li>
+        <li><a href="#sample01">요소 객체 : 클래스 메서드 : .classList.remove() : 클래스 삭제</a></li>
+        <li><a href="#sample02">요소 객체 : 클래스 메서드 : .classList.toggle() : 클래스 추가 / 삭제</a></li>
+        <li><a href="#sample03">요소 객체 : 클래스 메서드 : .classList.contains() 클래스 유/무 확인</a></li>
+
+        <br>
+        <li><a href="#c">요소 객체 : element 속성 : element.clientWidth : 요소의 가로 값(패딩 포함)</a></li>
+        <li><a href="#c">요소 객체 : element 속성 : element.clientHeight : 요소의 세로 값(패딩 포함)</a></li>
+        <li><a href="#c">요소 객체 : element 속성 : element.offsetWidth : 요소의 가로 값(패딩 / 보더 포함)</a></li>
+        <li><a href="#c">요소 객체 : element 속성 : element.offsetHeight : 요소의 세로 값(패딩 / 보더 포함)</a></li>
+        <li><a href="#c">요소 객체 : element 속성 : element.getBoundingClientRect : 요소의 정보 값 가져오기</a></li>
+    </ol>
 
 
     <hr>
@@ -283,7 +296,7 @@
         //        document.querySelectorAll(".ex2 div").forEach((el) => {
         //            el.classList.toggle("active");
         //        })
-        //    });
+        //     });
         //});
 
         //클릭한 이미지만
@@ -314,7 +327,20 @@
         </div>
         <div class="code">
             <pre class="line-numbers"><code class="language-js"> {
-   
+    document.querySelector(".btn3-1").addEventListener("click" , () => {
+        document.querySelectorAll(".ex3 > div").forEach(el => {
+            if( el.classList.contains("active") ){     
+                el.classList.remove("active");
+                
+            }
+        })
+    });
+
+    //리셋
+    document.querySelector(".btn3-0").addEventListener("click" , function(){
+        document.querySelector(".ex3 > div:nth-child(1)").classList.add("active");
+        document.querySelector(".ex3 > div:nth-child(4)").classList.add("active");
+    });    
 }
 </code></pre>
         </div>
@@ -340,6 +366,123 @@
 
     <!-- sample03 -->
     <hr>
+
+      <!-- sample04 -->
+      <style>
+        .ex4 {
+            min-height: 300px;
+            position: relative;
+        }
+        .ex4 .circle {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50% , -50%);
+            display: block;
+            height: 100px;
+            width: 100px;
+            border-radius: 50%;
+            background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+            padding: 10px;
+            margin: 10px;
+            border: 5px solid #eb97d3;
+            box-sizing: content-box;
+        }
+        </style>
+
+      <div id="sample04" class="sample">
+        <h2>04. clientWidth() / offsetWidth() / getBoundingClientRect()</address><span class="dot"></span></h2>
+        <div class="view ex4">
+            <span class="circle circle4"></span>
+            <p class="text text4">여기는 텍스트 영역입니다.</p>
+        </div>
+        <div class="btn">
+    
+            <a href="#c" class="btn4-1">클릭하면 원의 가로 값(clientWidth)을 구합니다.</a>
+            <a href="#c" class="btn4-2">클릭하면 원의 세로 값(clientHeigth)을 구합니다.</a>
+            <a href="#c" class="btn4-3">클릭하면 원의 가로 값(offsetWidth)을 구합니다.</a>
+            <a href="#c" class="btn4-4">클릭하면 원의 세로 값(offsetHeight)을 구합니다.</a>
+            <a href="#c" class="btn4-5">클릭하면 원의 가로 값(getBoundingClientRect)을 구합니다.</a>
+        </div>
+        <div class="code">
+            <pre class="line-numbers"><code class="language-js"> {
+    const cw = document.querySelector(".circle4").clientWidth;
+    const ch = document.querySelector(".circle4").clientHeight;
+    const ow = document.querySelector(".circle4").offsetWidth;
+    const oh = document.querySelector(".circle4").offsetHeight;
+    const rect = document.querySelector(".circle4").getBoundingClientRect();
+
+    document.querySelector(".btn4-1").addEventListener("click" , function(){
+        document.querySelector(".text4").innerHTML = "이 원의 가로 값은" + cw + "px 입니다.";
+    });
+
+    document.querySelector(".btn4-2").addEventListener("click" , function(){
+        document.querySelector(".text4").innerHTML = "이 원의 세로 값은" + ch + "px 입니다.";
+    });
+
+    document.querySelector(".btn4-3").addEventListener("click" , function(){
+        document.querySelector(".text4").innerHTML = "이 원의 가로 값은" + ow + "px 입니다.";
+    });
+
+    document.querySelector(".btn4-4").addEventListener("click" , function(){
+        document.querySelector(".text4").innerHTML = "이 원의 세로 값은" + oh + "px 입니다.";
+    });
+
+    document.querySelector(".btn4-5").addEventListener("click" , function(){
+        document.querySelector(".text4").innerHTML = `
+            이 원의 x 값은 ${parseInt(rect.x)}px 입니다.
+            이 원의 y 값은 ${parseInt(rect.y)} px 입니다.
+            이 원의 top 값은 ${parseInt(rect.top)} px 입니다.
+            이 원의 left 값은 ${parseInt(rect.left)} px 입니다.
+            이 원의 rigth 값은  ${parseInt(rect.right)} px 입니다.
+            이 원의 bottom 값은  ${parseInt(rect.bottom)} px 입니다.
+            이 원의 width 값은  ${parseInt(rect.width)} px 입니다.
+            이 원의 height 값은  ${parseInt(rect.height)} px 입니다.`
+    });
+}
+</code></pre>
+        </div>
+    </div>
+    <hr>
+
+    <script>
+        const cw = document.querySelector(".circle4").clientWidth;
+        const ch = document.querySelector(".circle4").clientHeight;
+        const ow = document.querySelector(".circle4").offsetWidth;
+        const oh = document.querySelector(".circle4").offsetHeight;
+        const rect = document.querySelector(".circle4").getBoundingClientRect();
+
+        document.querySelector(".btn4-1").addEventListener("click" , function(){
+            document.querySelector(".text4").innerHTML = "이 원의 가로 값은" + cw + "px 입니다.";
+        });
+
+        document.querySelector(".btn4-2").addEventListener("click" , function(){
+            document.querySelector(".text4").innerHTML = "이 원의 세로 값은" + ch + "px 입니다.";
+        });
+
+        document.querySelector(".btn4-3").addEventListener("click" , function(){
+            document.querySelector(".text4").innerHTML = "이 원의 가로 값은" + ow + "px 입니다.";
+        });
+
+        document.querySelector(".btn4-4").addEventListener("click" , function(){
+            document.querySelector(".text4").innerHTML = "이 원의 세로 값은" + oh + "px 입니다.";
+        });
+
+        document.querySelector(".btn4-5").addEventListener("click" , function(){
+            document.querySelector(".text4").innerHTML = `
+                이 원의 x 값은 ${parseInt(rect.x)}px 입니다.<br>
+                이 원의 y 값은 ${parseInt(rect.y)} px 입니다.<br>
+                이 원의 top 값은 ${parseInt(rect.top)} px 입니다.<br>
+                이 원의 left 값은 ${parseInt(rect.left)} px 입니다.<br>
+                이 원의 rigth 값은  ${parseInt(rect.right)} px 입니다.<br>
+                이 원의 bottom 값은  ${parseInt(rect.bottom)} px 입니다.<br>
+                이 원의 width 값은  ${parseInt(rect.width)} px 입니다.<br>
+                이 원의 height 값은  ${parseInt(rect.height)} px 입니다.<br>`
+        });
+    </script>
+
+    <!-- sample04 -->
+
     <hr>
     <hr>
     <hr>
