--- a/site/index.html
+++ b/site/index.html
@@ -73,7 +73,7 @@
     </header>
     <div class="bs-header bgs1" id="content">
         <div class="container">
-            <h1>Wireframe Reference v1.0 &lt;/doc&gt;</h1>
+            <h1>Site Reference v1.0 &lt;/doc&gt;</h1>
             <p><a href="https://low1ife.github.io/dothome2021" target="_blank">low1ife.github.io</a></p>
         </div>
     </div>
@@ -82,14 +82,14 @@
             <div class="col-md-9" role="main">
                 <!-- Intro1 -->
                 <div class="bs-docs-section">
-                    <h2 id="intro1" class="page-header">카드유형1</h2>
+                    <h2 id="intro1" class="page-header">카드유형</h2>
                     <p>코드 보기 <a href="cardType.html">View</a></p>
                 </div>
                 <!-- //Intro1 -->
 
                  <!-- Intro2 -->
                  <div class="bs-docs-section">
-                    <h2 id="intro2" class="page-header">이미지유형1</h2>
+                    <h2 id="intro2" class="page-header">이미지유형</h2>
                     <p>코드 보기 <a href="imageType.html">View</a></p>
                 </div>
                 <!-- //Intro2 -->
@@ -104,8 +104,8 @@
             <div class="col-md-3">
                 <div class="bs-sidebar hidden-print" role="complementary">
                     <ul class="nav bs-sidenav">
-                        <li><a href="#intro1">카드 유형1</a></li>
-                        <li><a href="#intro2">이미지 유형1</a></li>
+                        <li><a href="#intro1">카드 유형</a></li>
+                        <li><a href="#intro2">이미지 유형</a></li>
                     </ul>
                 </div>
             </div>
