--- a/refer-javascript/javascriptRefer09.html
+++ b/refer-javascript/javascriptRefer09.html
@@ -486,7 +486,7 @@
 
 <script>
   document.querySelector(".btn3-1").addEventListener("click" , function(){
-      prompt("오늘 공부할 준비가 되셨나요?");
+      const text = prompt("오늘 공부할 준비가 되셨나요?");
 
       document.querySelector(".text3").innerHTML = text;
   });
